# template-mcp

./: .env.dev  .env.example  .env.prod  .env.test  EUNOMIA_AUTHORIZATION.md  LICENSE  MIGRATION.md  README.md  Task.md  demo_eunomia_authorization.py  main.py  pyproject.toml  test_eunomia_integration.py  verify_implementation.py
.db/: eunomia_db.sqlite
.github/: copilot-instructions.md  copilot-task-prompt.md
.github/prompts/: copilot-pr.prompt.md  copilot-task.prompt.md
.github/workflows/: ci.yml  comprehensive.yml  dependencies.yml  pr-checks.yml
configs/: README.md  eunomia_policies.json  logging_config.yaml
docs/: README.md  ci-pipeline.md
examples/: README.md  basic_client.py  docker-compose.yml
src/template_mcp/: __init__.py  config.py  eunomia_middleware.py  logging.py  main.py  models.py  server.py
tests/: conftest.py  test_basic.py  test_config.py  test_models.py  test_server.py
