[project]
name = "template-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eunomia-ai>=0.3.9",
    "eunomia-sdk>=0.3.9",
    "fastmcp>=2.10.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "taskipy>=1.14.1",
]
